Adiciona a página do carrossel

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport", content="width=device-width, user-scalable=no, initial-escale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="carrossel2.css">
-	<title>Carrossel alternativo</title>
+	<link rel="stylesheet" href="index.css">
+	<title>Carrossel</title>
 </head>
 <body>
 	<div class="carrossel">
